--- a/templates/include/head.html
+++ b/templates/include/head.html
@@ -20,7 +20,7 @@
 <script src="custom/js/app.js"></script>
 <script src="custom/js/common.js"></script>
 <script src="custom/js/demo.js"></script>
-<script src="custom/js/comment.js"></script>
+<!-- <script src="custom/js/comment.js"></script> -->
 <!-- endbuild -->
 
 
