add isocodes, public rest_sms_api

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -159,6 +159,7 @@
             <li><a href="rest_api.html">数据存储 API</a></li>
             <li><a href="rest_api.html#Push_通知">消息推送 API</a></li>
             <li><a href="realtime_rest_api.html">实时通信 API</a></li>
+            <li><a href="rest_sms_api.html">短信验证码 API</a></li>
             <li><a href="rest_api.html#统计数据API">数据统计 API</a></li>
             <li><a href="cql_guide.html">CQL 查询语言详解</a></li>
             <li><a href="oauth2_provider.html">开放平台接入</a></li>
