--- a/views/realtime_guide.tmpl
+++ b/views/realtime_guide.tmpl
@@ -64,9 +64,9 @@ attr|Object|开发者设置的对话的自定义属性
 
 Tom 想建立一个群，把自己好朋友都拉进这个群，然后给他们发消息，他需要做的事情是：
 
-第一步：建立一个朋友列表
-第二步：新建一个对话，把朋友列为对话的参与人员
-第三步：发送消息
+1. 建立一个朋友列表
+2. 新建一个对话，把朋友们列为对话的参与人员
+3. 发送消息
 
 {% block groupChat_send %}{% endblock %}
 ```
