fix: y u still avoscloud-docs?

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,7 +2,7 @@
 <div class="home-full-width-content">
   <div class="doc-home-title">
     <h1 class="font-logo">LeanCloud Documentation</h1>
-    <h4>LeanCloud 官方开发者文档 <a href="avoscloud-docs.tar.gz">离线下载</a></h4>
+    <h4>LeanCloud 官方开发者文档 <a href="leancloud-docs.tar.gz">离线下载</a></h4>
   </div>
   <!-- .doc-home-title -->
 
