当所有都加载完运行完再进行 angular boot

--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -67,6 +67,24 @@
 ZeroClipboard.setDefaults({
     moviePath: 'custom/js/lib/zeroclipboard/zeroclipboard.swf'
 });
+$(function(){
+    // $('#content [version]').each(function(k,v){
+    //     var version = $(v).attr('version');
+    //     $(v).append('<div class="toggle-comment" ng-click="showCommentDialog(\''+version+'\''+',$event)">+ <span> {{}}</span> </div>');
+    // })
+
+    $('#content [version]').each(function(k,v){
+        var version = $(v).attr('version');
+        $(v).append('<div version="'+version+'" all-comment="allComment" showDialogMethod="showCommentDialog()" lc-comment> </div>');
+    });
+
+    angular.element(document).ready(function() {
+
+      angular.bootstrap(document, ['app']);
+
+    });
+});
+
 </script>
 
 
