angular boot 顺序问题

--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -47,6 +47,13 @@
 ZeroClipboard.setDefaults({
     moviePath: 'custom/js/lib/zeroclipboard/zeroclipboard.swf'
 });
+
+$(function(){
+    angular.element(document).ready(function() {
+      angular.bootstrap(document, ['app']);
+
+    });
+});
 </script>
 
 
