--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -812,34 +812,114 @@ blockquote{
   color:#777;
 }
 
-
-#comment-container{
-  width:300px;
-  height:300px;
-  position:absolute;
-  display:none;
-  z-index:999;
-  border:1px solid;
-  background-color:white
-}
-#comment-container .hd{
-    background-color: #487858;
-    color: white;
-    padding: 2px 4px;
-    font-weight: bold;
-    margin: 0 0 6px 0;
-    position: relative;
-    height: 20px;
-}
-
-#comment-container .close{
+// Comments
+#comment-container {
+  width: 400px;
+  height: 500px;
   position: absolute;
-  top: 3px;
-  right: 4px;
-  height: 13px;
-  width: 17px;
-  margin: 0;
-  padding: 0;
+  display: none;
+  z-index: 999;
+  background-color: #fff;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 10px 50px 0 rgba(0, 0, 0, 0.2);
+  border-radius: @border-radius-base;
   overflow: hidden;
+
+  @head-size: 24px;
+  @compose-size: 130px;
+
+  .comment-head {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #fff;
+    color: white;
+    font-weight: bold;
+    height: @head-size;
+    width: @head-size;
+    box-shadow: 0 0 5px 5px #fff;
+  }
+
+  .close {
+    height: @head-size;
+    width: @head-size;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    font-weight: 300;
+    font-size: @head-size;
+    line-height: @head-size;
+  }
+
+  .comment-body {
+    width: 100%;
+    // height: calc(~"100% - 20px - 130px");
+    height: 100%;
+    overflow: scroll;
+
+    .comment-list {
+      padding-bottom: @compose-size;
+
+      ul {
+        .list-unstyled;
+        margin: 0;
+        padding: 15px;
+
+        li {
+          margin-bottom: 1.6em;
+          word-wrap: break-word;
+          word-break: break-word;
+
+          &:last-child {
+            margin-bottom: 0;
+          }
+        }
+      }
+
+      .comment-author {
+        font-weight: bold;
+      }
+
+      .comment-timestamp {
+        color: @gray-light;
+        font-size: @font-size-small;
+      }
+    }
+  }
+
+  .comment-compose {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: @compose-size;
+    padding: 15px;
+    box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.1);
+    background: #fff;
+
+    .form-meta {
+      line-height: 30px;
+    }
+
+    .btn {
+
+      .icon {
+        font-size: 17px;
+        vertical-align: middle;
+      }
+    }
+
+    textarea {
+      resize: none;
+    }
+  }
+
+  .comment-list-wrap {
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+    // width: 100%;
+    // height: 100%;
+    // overflow: scroll;
+  }
 }
 
