--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -24,6 +24,8 @@ body {
 
   pre {
     margin-bottom: 18px;
+    // fix inline comment indicator not showing in overflowed container
+    overflow: visible;
   }
 
   sup {
@@ -844,11 +846,12 @@ blockquote{
       background: #eee;
       padding: 0 6px;
       border-radius: 4px;
-      color: @link-color;
+      color: @gray;
       font-size: 11px;
       line-height: 18px;
       min-width: 20px;
       min-height: 18px;
+      text-align: center;
 
       &:after {
         position: absolute;
@@ -866,6 +869,7 @@ blockquote{
 
     var {
       font-size: 13px;
+      font-style: normal;
     }
 
     &.has-comments {
@@ -880,6 +884,10 @@ blockquote{
       }
     }
 
+    .doc-content pre:hover &,
+    .doc-content pre:focus &,
+    .doc-content li:hover &,
+    .doc-content li:focus &,
     .doc-content p:hover &,
     .doc-content p:focus & {
       opacity: 1;
@@ -904,7 +912,8 @@ blockquote{
 
 #comment-container {
   width: 400px;
-  height: 500px;
+  min-height: 180px;
+  max-height: 520px;
   position: absolute;
   display: none;
   z-index: 999;
@@ -912,6 +921,10 @@ blockquote{
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 10px 50px 0 rgba(0, 0, 0, 0.2);
   border-radius: @border-radius-base;
   overflow: hidden;
+
+  &.no-comments {
+    // height: 200px;
+  }
 
   @head-size: 24px;
   @compose-size: 130px;
@@ -942,7 +955,8 @@ blockquote{
   .comment-body {
     width: 100%;
     // height: calc(~"100% - 20px - 130px");
-    height: 100%;
+    // height: 100%;
+    max-height: 500px;
     overflow: scroll;
 
     .comment-list {
