feat(style): inline comment visual tweak

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -838,7 +838,7 @@ blockquote{
 
   .toggle-comment {
     opacity: 0;
-    transition: opacity .2s ease;
+    transition: opacity .4s ease;
 
     span {
       display: block;
@@ -891,6 +891,7 @@ blockquote{
     .doc-content p:hover &,
     .doc-content p:focus & {
       opacity: 1;
+      transition: none;
     }
 
     &.has-comments,
