--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -829,7 +829,11 @@ blockquote{
   top: 0;
   right: 100%;
   cursor: pointer;
-  margin-right: 10px;
+  padding-right: 10px;
+
+  blockquote & {
+    padding-right: 35px; // 10px + 20px (padding) + 5px (border-left)
+  }
 
   &:hover,
   &:focus {
