sync newest python api doc

--- a/api/python/_static/alabaster.css
+++ b/api/python/_static/alabaster.css
@@ -15,9 +15,6 @@
 
 
 
-
-
-
 @import url("basic.css");
 
 /* -- page layout ----------------------------------------------------------- */
@@ -71,9 +68,11 @@ div.footer a {
     color: #888;
 }
 
-div.related {
+
+div.relations {
     display: none;
 }
+
 
 div.sphinxsidebar a {
     color: #444;
@@ -287,6 +286,13 @@ pre, tt, code {
     font-size: 0.9em;
 }
 
+.hll {
+    background-color: #FFC;
+    margin: 0 -12px;
+    padding: 0 12px;
+    display: block;
+}
+
 img.screenshot {
 }
 
@@ -380,8 +386,8 @@ pre {
 }
 
 dl pre, blockquote pre, li pre {
-    margin-left: -60px;
-    padding-left: 60px;
+    margin-left: 0;
+    padding-left: 30px;
 }
 
 dl dl pre {
@@ -520,18 +526,6 @@ a:hover tt, a:hover code {
         margin: 0;
     }
 
-    div.related {
-        display: block;
-        margin: 0;
-        padding: 10px 0 20px 0;
-    }
-
-    div.related ul,
-    div.related ul li {
-        margin: 0;
-        padding: 0;
-    }
-
     div.footer {
         display: none;
     }
@@ -583,5 +577,9 @@ div#changelog > div.section > ul > li > p:only-child {
 
 /* Hide fugly table cell borders in ..bibliography:: directive output */
 table.docutils.citation, table.docutils.citation td, table.docutils.citation th {
-  border:none;
+  border: none;
+  /* Below needed in some edge cases; if not applied, bottom shadows appear */
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
