feat: /ticket\.avosapps\.com/ticket\.leancloud\.cn/ fixes https://github.com/leancloud/docs/issues/409

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -28,7 +28,7 @@
                           {% endif %}
                           <li><a href="/docs">文档</a></li>
                           <li><a href="/docs/sdk_down.html">SDK 下载</a></li>
-                          <li><a href="http://ticket.avosapps.com/tickets">技术支持</a></li>
+                          <li><a href="http://ticket.leancloud.cn/tickets">技术支持</a></li>
                           <li role="presentation" class="divider"></li>
                           <li><a href="/pricing.html">价格</a></li>
                           <li><a href="/apps.html">移动端 App</a></li>
