rebase for relation sample code.

--- a/views/relation_guide.tmpl
+++ b/views/relation_guide.tmpl
@@ -14,13 +14,22 @@ LeanCloud中 有 4 种方式构建对象之间的关系：
 当你需要一个一对多关系的时候，该使用 Pointers 还是 Arrays 实现，需要考虑几个因素。首先，需要考虑关系中包含的对象数量。如果关系「多」方包含的对象数量可能非常大（大于 100 左右），那么你就必须使用 Pointers。反之，如果对象数量很小（低于 100 或更少），那么 Arrays 可能会更方便，特别是如果你经常需要获取父对象同时得到所有相关的对象（一对多关系中的「多」）。
 
 ### 使用 Pointers 实现一对多关系
-假如我们设计一个类微博的应用，每一个用户都会发送多条微博，但是一条微博的原作者有且仅有一个，这是一个典型的一对多的用户场景，现在我们用 `Post` 来表示微博对象，我们确定每个 `Post` 对象都会与一个 AVUser，也就是微博的作者相关联。我们可以像这样实现：
+假如我们设计一个类微博的应用，每一个用户都会发送多条微博，但是一条微博的原作者有且仅有一个，这是一个典型的一对多的用户场景，现在我们用 `Post` 来表示微博对象，我们确定每个 `Post` 对象都会与一个 AVUser，也就是与微博的作者相关联，我们可以像这样实现：
 
-{% block postPointToAVUser %}{% endblock %}
+{% block postPointToAVUser %}
+```
+- 新建一条 Post
+- 把当前用户作为一个  Pointer 类型关联到 Post 的 potedBy 列
+```
+{% endblock %}
 
 我们可以使用下面的代码来查询某个 AVUser 创建的 `Post` 对象：
 
-{% block queryPostByAVUser %}{% endblock %}
+{% block queryPostByAVUser %}
+```
+- 
+```
+{% endblock %}
 
 如果我们需要查询某个 `Post` 对象的创建者，也就是获取 `potedBy ` 属性：
 
@@ -53,7 +62,7 @@ LeanCloud中 有 4 种方式构建对象之间的关系：
 {% block queryAVUserContainsTopic %}{% endblock %}
 
 ## 多对多关系
-现在让我们来处理多对多关系。假设我们有一个读书应用，我们需要对`Book`对象和`Author`对象建模。如我们所知，一个作者可以写多本书，一本书也可以有多个作者。这是一个典型的多对多关系，你必须选择使用 Arrays， AVRelation 或创建自己的关联表来实现这种关系。
+现在让我们来处理多对多关系。假设我们有一个读书应用，我们需要对 `Book` 对象和 `Author` 对象建模。如我们所知，一个作者可以写多本书，一本书也可以有多个作者。这是一个典型的多对多关系，你必须选择使用 Arrays， `AVRelation` 或创建自己的关联表来实现这种关系。
 
 决策的关键在于是否需要为这个关系附加一些属性。如果不需要，使用 AVRelation 或 Arrays 是最简单的。通常情况下，使用 Arrays 会有更好的性能和更少的查询。如果多对多关系中任何一方对象数量可能达到或超过 100，像一对多关系中描述的原因一样，使用 AVRelation 或关联表是更好的选择。
 
@@ -63,7 +72,7 @@ LeanCloud中 有 4 种方式构建对象之间的关系：
 * 关系创建者
 * 某人查看此关系的次数
 
-### 使用 AVRelation
+### 使用 AVRelation 实现多对多关系
 我们可以使用 AVRelation 构建一个 `Student` 和 `Course` 之间的关系。
 一个学生可以学习「多」门课程，一门课程也可以拥有「多」个学生。
 
@@ -79,7 +88,7 @@ LeanCloud中 有 4 种方式构建对象之间的关系：
 
 {% block queryCoursesByStudent %}{% endblock %}
 
-### 使用关联表
+### 使用关联表实现多对多关系
 也许某些情况下，我们需要知道更多关系的附加信息。比如学生选课的系统中，如果你想知道学生何时选修的这门课，或者想知道学生选修是通过手机选修还是通过网站操作的，这个时候单独使用 `AVRelation` 就无法满足需求，因为 `AVRelation` 不支持额外的自定义属性，此时我们可以使用传统的数据库设计方法：关联表。
 
 为了实现这个需求，我们创建一个独立的表保存 `Student` 和 `Course` 的关系，暂且叫做 `CourseChoosing` 的表，然后它有以下几个字段：
@@ -125,5 +134,3 @@ LeanCloud中 有 4 种方式构建对象之间的关系：
 * **限制部分用户数据的权限** 在这个场景中，你可以将此对象拆分成两部分，一部分包含所有用户可见的数据，另一部分包含所有仅自己可见的数据（通过ACL控制）。同样，你也可以实现一部分包含所有用户可修改的数据，另一部分包含所有仅自己可修改的数据。
 * **避免大对象** 在这个场景中，你的原始对象大小大于了对象的上限值（128K），你可以创建另一个对象来存储额外的数据。当然，这通常需要更好地设计你的数据模型来避免出现大对象。如果确实无法避免，你也可以考虑使用AVFile存储大数据。
 * **更灵活的文件对象** AVFile 可以方便的存取文件，但是作为对象查询修改等不是很方便，可以使用 AVObject 构造一个自己的文件对象并与 AVFile 一对一关联，将文件属性存于AVObject 中，这样既可以方便查询修改文件属性，也可以方便存取文件。
-
-感谢您阅读此文档。对于使用的复杂性我们深感抱歉。通常，数据的关系建模是一个难题。但是我们可以看到光明的一面：它仍然比人际关系简单。
