--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -368,6 +368,8 @@ if (name) {
 
 {% block project_constraint %}{% endblock %}
 
+{% block project_start %}{% endblock %}
+
 ### 健康监测
 
 LeanEngine 项目在部署启动时，部署服务会对新启动的应用进行 `ping` 监测（每隔 1 秒请求一次，一共 15 次），请求 URL 为 `/__engine/1/ping`，如果响应的 `statusCode` 为 `200` 则认为新的节点启动成功，整个部署才会成功；否则会收到 `应用启动检测失败` 类型的错误信息，导致部署失败。
@@ -806,3 +808,7 @@ console.log('getHours', time.hours())
 为了方便大家的使用，更加符合通常的习惯，LeanEngine 运行时环境（无沙箱的 Node.js 环境和 Python 环境）都是使用**东八区**作为默认时区。当然，我们仍然建议程序的时间字符串带有时区标志。
 
 {% block introduceCloudCodeV2 %}{% endblock %}
+
+
+
+
