--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -91,7 +91,7 @@ LeanEngine 上有一些平台相关的环境变量，可以在你的代码中使
 * `LC_APP_KEY`: 当前应用的 App Key
 * `LC_APP_MASTER_KEY`: 当前应用的 Master Key
 * `LC_APP_ENV`: 当前应用环境:
-  * 开发环境没有该管径变量，或值为 `development`
+  * 开发环境没有该环境变量，或值为 `development`
   * 测试环境值为 `stage`
   * 生产环境值为 `production`
 * `LC_APP_PORT`: 当前应用开放给外网的端口，只有监听此端口，用户才可以访问到你的服务
