updated links (avoscloud.com -> leancloud.cn)
also removed https://leancloud.cn/docs/

--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -19,7 +19,7 @@
 
 ### 命令行工具
 
-使用命令行工具可以非常方便的部署、发布 LeanEngine 项目，查看项目状态，查看日志，甚至支持多应用部署。具体使用请 [参考文档](https://leancloud.cn/docs/cloud_code_commandline.html)。
+使用命令行工具可以非常方便的部署、发布 LeanEngine 项目，查看项目状态，查看日志，甚至支持多应用部署。具体使用请 [参考文档](cloud_code_commandline.html)。
 
 ## Demo
 
@@ -27,7 +27,7 @@
 
 ## 快速入门
 
-首先确认本机已经安装了相关的运行环境和 [命令行工具](https://leancloud.cn/docs/cloud_code_commandline.html)。{% block runtime_env %}{% endblock %}
+首先确认本机已经安装了相关的运行环境和 [命令行工具](cloud_code_commandline.html)。{% block runtime_env %}{% endblock %}
 
 ### 创建应用
 
@@ -384,7 +384,7 @@ LeanEngine 项目在部署启动时，部署服务会对新启动的应用进行
 
 ### 使用命令行工具部署
 
-使用命令行工具可以非常方便地部署、发布应用，查看应用状态，查看日志，甚至支持多应用部署。具体使用请 [参考文档](https://leancloud.cn/docs/cloud_code_commandline.html)。
+使用命令行工具可以非常方便地部署、发布应用，查看应用状态，查看日志，甚至支持多应用部署。具体使用请 [参考文档](cloud_code_commandline.html)。
 
 除此之外，还可以使用 git 仓库部署。你需要将项目提交到一个 git 仓库，LeanCloud并不提供源码的版本管理功能，而是借助于git这个优秀的分布式版本管理工具。我们推荐你使用[CSDN Code平台](https://code.csdn.net/)，[github](https://github.com/)或者[BitBucket](https://bitbucket.org/)这样第三方的源码
 托管网站，也可以使用你自己搭建的git仓库(比如使用[gitlab.org](http://gitlab.org/))。下面我们详细描述下怎么使用。
