--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -1,13 +1,16 @@
 // Basic styles
 body {
   position: relative;
+  font-family: "Helvetica Neue", Helvetica, "Lantinghei SC", STHeiti, "Microsoft Yahei", "WenQuanYi Micro Hei", Arial, Verdana, sans-serif;
+  font-weight: 300;
 }
 
 .doc-content {
+  font-size: 15px;
 
   p,
   li {
-    line-height: 1.6;
+    line-height: 1.8;
     // Prepared for inline comment system
     position: relative;
     // padding-right: 50px;
