fix(tempate): container margin hotfix

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -570,7 +570,10 @@ ul#toc,#toc li {
 // Main content
 .doc-content {
   width: 100%;
-  padding-left: 16px;
+
+  &.with-comment {
+    padding-left: 16px;
+  }
 
   @media (max-width: 640px) {
     margin-top: 20px;
