chore: update deps

--- a/custom/less/app-docs.less
+++ b/custom/less/app-docs.less
@@ -25,18 +25,19 @@
 
 // Components
 // Components are defined by functions
-@import "comp-logo-font";
-@import "comp-icon";
-@import "comp-type";
-@import "comp-grid";
-@import "comp-navbar";
-@import "comp-callout";
-@import "comp-sidebar";
-@import "comp-loader";
-@import "comp-avatar";
-@import "comp-table";
-@import "comp-notifications";
-@import "comp-label";
+@import "ui-logo-font";
+@import "ui-icon";
+@import "ui-type";
+@import "ui-grid";
+@import "ui-navbar";
+@import "ui-callout";
+@import "ui-sidebar";
+@import "ui-loader";
+@import "ui-avatar";
+@import "ui-table";
+@import "ui-notifications";
+@import "ui-label";
+@import "ui-switch";
 
 // Sections
 // Sections are defined by pages, modules overrides should be also defined in specific pages
