--- a/custom/less/plugin-angular-motion.less
+++ b/custom/less/plugin-angular-motion.less
@@ -134,3 +134,14 @@
     animation-name: fadeOutWithoutScaleTooltip;
   }
 }
+
+.popover {
+
+  &.ng-enter {
+    animation-name: fadeInWithoutScaleTooltip;
+  }
+
+  &.ng-leave {
+    animation-name: fadeOutWithoutScaleTooltip;
+  }
+}
