--- a/custom/less/section-app-settings.less
+++ b/custom/less/section-app-settings.less
@@ -246,3 +246,87 @@
     // font-size: 60px;
   }
 }
+
+// cooperator-permission.html
+.sub-permission-title {
+  float: left;
+  margin: 0 15px 0 5px;
+
+  .checkbox.custom-control {
+    padding-left: 0;
+    margin-bottom: 0;
+
+    label {
+      font-size: 16px;
+    }
+
+    .icon {
+      color: @gray-light;
+      font-size: 40px;
+      vertical-align: middle;
+    }
+  }
+
+  .checkbox input:checked ~ .icon {
+    color: @brand-primary;
+  }
+}
+
+.sub-permission-cate {
+  margin-left: 60px;
+  .clearfix;
+
+  .checkbox.custom-control {
+    width: 33.333%;
+    width: calc(~"100% / 3");
+    margin-right: 0;
+    float: left;
+
+    @media (max-width: @screen-xs) {
+      width: 50%;
+    }
+  }
+}
+
+// security.html
+.app-setting-security {
+  .op-log {
+    min-height: 300px;
+    margin-bottom: 80px;
+    .date-range {
+      font-size: 14px;
+    }
+    .no-data-tip {
+      display: block;
+      margin-top: 50px;
+    }
+    .op-log-list {
+      height: 430px;
+      margin-top: 20px;
+      margin-bottom: 25px;
+      border-bottom: 1px solid #eee;
+      .op-log-user, .op-log-time, .op-log-ip, .op-log-location {
+        white-space: nowrap;
+      }
+      .op-log-user {
+        min-width: 100px;
+        text-overflow: ellipsis;
+      }
+      .op-log-time {
+        min-width: 150px;
+      }
+      .op-log-ip {
+        min-width: 130px;
+      }
+      .op-log-location {
+        min-width: 120px;
+      }
+      .op-log-content {
+        line-height: 15px;
+        max-height: 38px;
+        display: block;
+        overflow-y: auto;
+      }
+    }
+  }
+}
