--- a/custom/less/section-dashboard-header.less
+++ b/custom/less/section-dashboard-header.less
@@ -474,7 +474,7 @@
     font-family: 'LeanCloud';
     font-size: @s;
     line-height: 1;
-    content: "\e626";
+    content: @icon-search;
     width: @s;
     height: @s;
     pointer-events: none;
