--- a/custom/less/app.less
+++ b/custom/less/app.less
@@ -2,7 +2,7 @@
 // Load Bootstrap from app/components/bootstrap/
 @import "loader-bootstrap";
 
-// Custom theme for Bootstrap
+// Global config, custom theme for Bootstrap
 // Load custom Bootstrap theme, all Bootstrap related customizations are defined here
 @import "theme-leancloud";
 
@@ -17,6 +17,8 @@
 @import "plugin-angularstrap";
 @import "plugin-solarized-light";
 @import "plugin-odometer-theme-default";
+@import "plugin-bootstrap-slider";
+@import "plugin-nprogress";
 
 // Plug-ins Customizations
 // Override plug-in styles
@@ -24,18 +26,19 @@
 
 // Components
 // Components are defined by functions
-@import "comp-logo-font";
-@import "comp-icon";
-@import "comp-type";
-@import "comp-grid";
-@import "comp-navbar";
-@import "comp-callout";
-@import "comp-sidebar";
-@import "comp-loader";
-@import "comp-avatar";
-@import "comp-table";
-@import "comp-notifications";
-@import "comp-label";
+@import "ui-logo-font";
+@import "ui-icon";
+@import "ui-type";
+@import "ui-grid";
+@import "ui-navbar";
+@import "ui-callout";
+@import "ui-sidebar";
+@import "ui-loader";
+@import "ui-avatar";
+@import "ui-table";
+@import "ui-notifications";
+@import "ui-label";
+@import "ui-switch";
 
 // Sections
 // Sections are defined by pages, modules overrides should be also defined in specific pages
