--- a/custom/less/section-leananalytics.less
+++ b/custom/less/section-leananalytics.less
@@ -733,3 +733,46 @@ button.close {
 #stat-crash-chart {
   display: none;
 }
+
+.trace-detail {
+  font-family: @font-family-monospace;
+
+  .thread-title {
+    color: @link-color;
+    margin-top: 2em;
+    margin-bottom: .6em;
+    font-weight: bold;
+
+    &.stat-crash-title {
+      margin-top: 0;
+    }
+  }
+
+  // temp font stack fix
+  .callout {
+    font-family: @font-family-sans-serif;
+    margin-bottom: 1em;
+  }
+}
+
+.crash-mark {
+  margin-right: 6px;
+
+  &.resolved {
+
+    &:hover,
+    &:focus {
+      color: @brand-success;
+      border-color: @brand-success;
+    }
+  }
+
+  &.unresolved {
+
+    &:hover,
+    &:focus {
+      color: @brand-danger;
+      border-color: @brand-danger;
+    }
+  }
+}
