--- a/custom/less/section-settings.less
+++ b/custom/less/section-settings.less
@@ -67,11 +67,68 @@
   }
 }
 
+.user-info-section {
+  margin-top: 6px;
+
+  .large {
+    font-size: 160%;
+    margin-bottom: 6px;
+  }
+
+  .medium {
+    font-size: 140%;
+    opacity: .5;
+  }
+
+  .user-info-tier {
+
+    .icon {
+      position: relative;
+      top: -1px;
+      font-size: 20px;
+      vertical-align: middle;
+    }
+  }
+
+  .support-expire-date {
+    opacity: .5;
+  }
+
+  .cc-func-type,
+  .cc-func-name {
+    font-family: @font-family-sans-serif;
+    font-size: @font-size-base;
+  }
+
+  .cc-func-type {
+    color: #777;
+    text-transform: uppercase;
+  }
+
+  .cc-func-type-user {
+    color: #ffab11;
+    background: #fff8e9;
+  }
+
+  .cc-func-type-team {
+    color: #009eff;
+    background: #ebf7ff;
+  }
+}
+
+.user-info-edit-btn {
+  display: block;
+  margin: 10px auto;
+}
+
 .avatar-settings {
   @s: 100px;
   display: block;
   width: @s;
   height: @s;
+  margin: 0 auto;
+  margin-top: 6px;
+  text-align: center;
 
   span,
   img {
@@ -191,10 +248,14 @@ table > tbody > tr > td > .cursor-pointer {
 
 // bill_charge.html
 .payment-methods {
+  margin-bottom: @grid-gutter-width;
 
-  label {
+  .payment-method {
+    color: @text-color;
+    display: inline-block;
     cursor: pointer;
     vertical-align: top;
+    text-decoration: none;
 
     .payment-method-radio {
       outline: none !important;
@@ -217,12 +278,21 @@ table > tbody > tr > td > .cursor-pointer {
     }
 
     .payment-method-text {
-      width: 110px;
-      height: 51px;
-      line-height: 51px;
+      min-width: 110px;
+      height: 53px;
+      padding: 7px 12px;
+      line-height: (53px - 7px * 2);
       text-align: center;
       border-radius: @border-radius-base;
       border: 1px solid #ddd;
+
+      &.has-balance {
+        line-height: 1.3;
+      }
+
+      .payment-method-credit-balance {
+        opacity: .6;
+      }
     }
 
     &:hover,
