--- a/custom/less/ui-icon.less
+++ b/custom/less/ui-icon.less
@@ -1,10 +1,11 @@
 @font-face {
   font-family: 'LeanCloud';
-  src:url('../fonts/LeanCloud.eot?-tz2fi7');
-  src:url('../fonts/LeanCloud.eot?#iefix-tz2fi7') format('embedded-opentype'),
-      url('../fonts/LeanCloud.woff?-tz2fi7') format('woff'),
-      url('../fonts/LeanCloud.ttf?-tz2fi7') format('truetype'),
-      url('../fonts/LeanCloud.svg?-tz2fi7#LeanCloud') format('svg');
+  src:url('../fonts/LeanCloud.eot?-ap9eq');
+  src:url('../fonts/LeanCloud.eot?#iefix-ap9eq') format('embedded-opentype'),
+      url('../fonts/LeanCloud.woff2?-ap9eq') format('woff2'),
+      url('../fonts/LeanCloud.ttf?-ap9eq') format('truetype'),
+      url('../fonts/LeanCloud.woff?-ap9eq') format('woff'),
+      url('../fonts/LeanCloud.svg?-ap9eq#LeanCloud') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -18,444 +19,549 @@
   text-transform: none;
   line-height: 1;
 
-  // Better Font Rendering ===========
+  /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-arrow-simple-bold:before {
+  content: "\e686";
+}
+.icon-arrow-simple:before {
+  content: "\e685";
+}
+.icon-building:before {
+  content: "\e683";
+}
+.icon-phone:before {
+  content: "\e684";
+}
+.icon-external:before {
+  content: "\e682";
+}
+.icon-plug:before {
+  content: "\e66d";
+}
+.icon-outbound:before {
+  content: "\e66e";
+}
+.icon-factory:before {
+  content: "\e66f";
+}
+.icon-bandaid:before {
+  content: "\e670";
+}
+.icon-satellite:before {
+  content: "\e671";
+}
+.icon-map-location:before {
+  content: "\e672";
+}
+.icon-globe-alt:before {
+  content: "\e673";
+}
+.icon-location-arrow:before {
+  content: "\e674";
+}
+.icon-compose:before {
+  content: "\e675";
+}
+.icon-signpost:before {
+  content: "\e676";
+}
+.icon-heartbeat:before {
+  content: "\e677";
+}
+.icon-schema-free:before {
+  content: "\e678";
+}
+.icon-multi-lang:before {
+  content: "\e679";
+}
+.icon-graduation:before {
+  content: "\e67a";
+}
+.icon-stopwatch:before {
+  content: "\e67b";
+}
+.icon-keyhole:before {
+  content: "\e67c";
+}
+.icon-browser:before {
+  content: "\e67d";
+}
+.icon-wrench:before {
+  content: "\e67e";
+}
+.icon-layer-alt:before {
+  content: "\e67f";
+}
+.icon-globe-alt-2:before {
+  content: "\e680";
+}
+.icon-key:before {
+  content: "\e681";
+}
 .icon-play-bold:before {
   content: "\e66b";
 }
-
 .icon-play:before {
   content: "\e66c";
 }
-
 .icon-wandoujia:before {
   content: "\e66a";
 }
-
 .icon-apple:before {
   content: "\e668";
 }
-
 .icon-google-play:before {
   content: "\e669";
 }
-
 .icon-wechat-alt:before {
   content: "\e667";
 }
-
 .icon-blank-app:before {
   content: "\e666";
 }
-
 .icon-inbox-files-bold:before {
   content: "\e665";
 }
-
 .icon-inbox-files:before {
   content: "\e664";
 }
-
 .icon-dollars-bold:before {
   content: "\e65c";
 }
-
 .icon-yen-bold:before {
   content: "\e65d";
 }
-
 .icon-envelope-bold:before {
   content: "\e65e";
 }
-
 .icon-home-bold:before {
   content: "\e65f";
 }
-
 .icon-key-bold:before {
   content: "\e660";
 }
-
 .icon-checkmark-bold:before {
   content: "\e661";
 }
-
 .icon-smile-bold:before {
   content: "\e662";
 }
-
 .icon-hammer-bold:before {
   content: "\e64d";
 }
-
 .icon-megaphone-bold:before {
   content: "\e64e";
 }
-
 .icon-chart-bold:before {
   content: "\e64f";
 }
-
 .icon-share-bold:before {
   content: "\e650";
 }
-
 .icon-gear-bold:before {
   content: "\e651";
 }
-
 .icon-users-bold:before {
   content: "\e652";
 }
-
 .icon-search-bold:before {
   content: "\e653";
 }
-
 .icon-presentation-bold:before {
   content: "\e654";
 }
-
 .icon-push-bold:before {
   content: "\e655";
 }
-
 .icon-chat-alt-bold:before {
   content: "\e656";
 }
-
 .icon-chat-bold:before {
   content: "\e657";
 }
-
 .icon-database-bold:before {
   content: "\e658";
 }
-
 .icon-server-rack-bold:before {
   content: "\e659";
 }
-
 .icon-layer-bold:before {
   content: "\e65a";
 }
-
 .icon-cabinet-bold:before {
   content: "\e65b";
 }
-
 .icon-filter:before {
   content: "\e64b";
 }
-
 .icon-magnet:before {
   content: "\e64c";
 }
-
 .icon-package:before {
   content: "\e642";
 }
-
 .icon-clipboard:before {
   content: "\e643";
 }
-
 .icon-bulb:before {
   content: "\e644";
 }
-
 .icon-contact-card:before {
   content: "\e645";
 }
-
 .icon-crown:before {
   content: "\e646";
 }
-
 .icon-id-card:before {
   content: "\e647";
 }
-
 .icon-pie-chart:before {
   content: "\e648";
 }
-
 .icon-piggy-bank:before {
   content: "\e649";
 }
-
 .icon-controller:before {
   content: "\e64a";
 }
-
 .icon-sms:before {
   content: "\e641";
 }
-
 .icon-locked-on:before {
   content: "\e63f";
 }
-
 .icon-locked:before {
   content: "\e640";
 }
-
 .icon-pen:before {
   content: "\e63d";
 }
-
 .icon-gears:before {
   content: "\e63e";
 }
-
 .icon-team:before {
   content: "\e634";
 }
-
 .icon-user:before {
   content: "\e635";
 }
-
 .icon-avatar:before {
   content: "\e636";
 }
-
 .icon-add:before {
   content: "\e637";
 }
-
 .icon-smile:before {
   content: "\e638";
 }
-
 .icon-edit:before {
   content: "\e639";
 }
-
 .icon-share:before {
   content: "\e63a";
 }
-
 .icon-download:before {
   content: "\e63b";
 }
-
 .icon-trash:before {
   content: "\e63c";
 }
-
 .icon-rss:before {
   content: "\e633";
 }
-
 .icon-info:before {
   content: "\e632";
 }
-
 .icon-danger:before {
   content: "\e631";
 }
-
 .icon-list-selected:before {
   content: "\e630";
 }
-
 .icon-compare:before {
   content: "\e62f";
 }
-
 .icon-slider-alt:before {
   content: "\e62e";
 }
-
 .icon-list:before {
   content: "\e62d";
 }
-
 .icon-calendar:before {
   content: "\e62c";
 }
-
 .icon-plane:before {
   content: "\e625";
 }
-
 .icon-search:before {
   content: "\e626";
 }
-
 .icon-envelope:before {
   content: "\e627";
 }
-
 .icon-home:before {
   content: "\e628";
 }
-
 .icon-refresh:before {
   content: "\e629";
 }
-
 .icon-question:before {
   content: "\e62a";
 }
-
 .icon-credit-card:before {
   content: "\e62b";
 }
-
 .icon-at:before {
   content: "\e623";
 }
-
 .icon-twitter:before {
   content: "\e624";
 }
-
 .icon-golf:before {
   content: "\e622";
 }
-
 .icon-chart-alt:before {
   content: "\e620";
 }
-
 .icon-cabinet:before {
   content: "\e621";
 }
-
 .icon-graph:before {
   content: "\e61e";
 }
-
 .icon-lightning:before {
   content: "\e61f";
 }
-
 .icon-cloud:before {
   content: "\e61d";
 }
-
 .icon-path:before {
   content: "\e617";
 }
-
 .icon-slider:before {
   content: "\e618";
 }
-
 .icon-github:before {
   content: "\e619";
 }
-
 .icon-gear:before {
   content: "\e61a";
 }
-
 .icon-users:before {
   content: "\e61b";
 }
-
 .icon-weibo:before {
   content: "\e61c";
 }
-
 .icon-magic:before {
   content: "\e616";
 }
-
 .icon-radar:before {
   content: "\e610";
 }
-
 .icon-timer:before {
   content: "\e611";
 }
-
 .icon-plan:before {
   content: "\e612";
 }
-
 .icon-devices:before {
   content: "\e613";
 }
-
 .icon-chart:before {
   content: "\e614";
 }
-
 .icon-target:before {
   content: "\e615";
 }
-
 .icon-mobile:before {
   content: "\e60d";
 }
-
 .icon-beaker:before {
   content: "\e60e";
 }
-
 .icon-checked:before {
   content: "\e60f";
 }
-
 .icon-chat-alt:before {
   content: "\e60b";
 }
-
 .icon-dashboard:before {
   content: "\e60c";
 }
-
 .icon-analytics:before {
   content: "\e602";
 }
-
 .icon-atom:before {
   content: "\e603";
 }
-
 .icon-chat:before {
   content: "\e604";
 }
-
 .icon-cloud-storage:before {
   content: "\e605";
 }
-
 .icon-globe:before {
   content: "\e606";
 }
-
 .icon-lock:before {
   content: "\e607";
 }
-
 .icon-push:before {
   content: "\e608";
 }
-
 .icon-rewind:before {
   content: "\e609";
 }
-
 .icon-window:before {
   content: "\e60a";
 }
-
 .icon-slider-nav-left:before {
   content: "\e601";
 }
-
 .icon-slider-nav-right:before {
   content: "\e600";
 }
-
 .icon-inbox-empty:before {
   content: "\e663";
 }
 
+@icon-arrow-simple-bold: "\e686";
+@icon-arrow-simple: "\e685";
+@icon-building: "\e683";
+@icon-phone: "\e684";
+@icon-external: "\e682";
+@icon-plug: "\e66d";
+@icon-outbound: "\e66e";
+@icon-factory: "\e66f";
+@icon-bandaid: "\e670";
+@icon-satellite: "\e671";
+@icon-map-location: "\e672";
+@icon-globe-alt: "\e673";
+@icon-location-arrow: "\e674";
+@icon-compose: "\e675";
+@icon-signpost: "\e676";
+@icon-heartbeat: "\e677";
+@icon-schema-free: "\e678";
+@icon-multi-lang: "\e679";
+@icon-graduation: "\e67a";
+@icon-stopwatch: "\e67b";
+@icon-keyhole: "\e67c";
+@icon-browser: "\e67d";
+@icon-wrench: "\e67e";
+@icon-layer-alt: "\e67f";
+@icon-globe-alt-2: "\e680";
+@icon-key: "\e681";
+@icon-play-bold: "\e66b";
+@icon-play: "\e66c";
+@icon-wandoujia: "\e66a";
+@icon-apple: "\e668";
+@icon-google-play: "\e669";
+@icon-wechat-alt: "\e667";
+@icon-blank-app: "\e666";
+@icon-inbox-files-bold: "\e665";
+@icon-inbox-files: "\e664";
+@icon-dollars-bold: "\e65c";
+@icon-yen-bold: "\e65d";
+@icon-envelope-bold: "\e65e";
+@icon-home-bold: "\e65f";
+@icon-key-bold: "\e660";
+@icon-checkmark-bold: "\e661";
+@icon-smile-bold: "\e662";
+@icon-hammer-bold: "\e64d";
+@icon-megaphone-bold: "\e64e";
+@icon-chart-bold: "\e64f";
+@icon-share-bold: "\e650";
+@icon-gear-bold: "\e651";
+@icon-users-bold: "\e652";
+@icon-search-bold: "\e653";
+@icon-presentation-bold: "\e654";
+@icon-push-bold: "\e655";
+@icon-chat-alt-bold: "\e656";
+@icon-chat-bold: "\e657";
+@icon-database-bold: "\e658";
+@icon-server-rack-bold: "\e659";
+@icon-layer-bold: "\e65a";
+@icon-cabinet-bold: "\e65b";
+@icon-filter: "\e64b";
+@icon-magnet: "\e64c";
+@icon-package: "\e642";
+@icon-clipboard: "\e643";
+@icon-bulb: "\e644";
+@icon-contact-card: "\e645";
+@icon-crown: "\e646";
+@icon-id-card: "\e647";
+@icon-pie-chart: "\e648";
+@icon-piggy-bank: "\e649";
+@icon-controller: "\e64a";
+@icon-sms: "\e641";
+@icon-locked-on: "\e63f";
+@icon-locked: "\e640";
+@icon-pen: "\e63d";
+@icon-gears: "\e63e";
+@icon-team: "\e634";
+@icon-user: "\e635";
+@icon-avatar: "\e636";
+@icon-add: "\e637";
+@icon-smile: "\e638";
+@icon-edit: "\e639";
+@icon-share: "\e63a";
+@icon-download: "\e63b";
+@icon-trash: "\e63c";
+@icon-rss: "\e633";
+@icon-info: "\e632";
+@icon-danger: "\e631";
+@icon-list-selected: "\e630";
+@icon-compare: "\e62f";
+@icon-slider-alt: "\e62e";
+@icon-list: "\e62d";
+@icon-calendar: "\e62c";
+@icon-plane: "\e625";
+@icon-search: "\e626";
+@icon-envelope: "\e627";
+@icon-home: "\e628";
+@icon-refresh: "\e629";
+@icon-question: "\e62a";
+@icon-credit-card: "\e62b";
+@icon-at: "\e623";
+@icon-twitter: "\e624";
+@icon-golf: "\e622";
+@icon-chart-alt: "\e620";
+@icon-cabinet: "\e621";
+@icon-graph: "\e61e";
+@icon-lightning: "\e61f";
+@icon-cloud: "\e61d";
+@icon-path: "\e617";
+@icon-slider: "\e618";
+@icon-github: "\e619";
+@icon-gear: "\e61a";
+@icon-users: "\e61b";
+@icon-weibo: "\e61c";
+@icon-magic: "\e616";
+@icon-radar: "\e610";
+@icon-timer: "\e611";
+@icon-plan: "\e612";
+@icon-devices: "\e613";
+@icon-chart: "\e614";
+@icon-target: "\e615";
+@icon-mobile: "\e60d";
+@icon-beaker: "\e60e";
+@icon-checked: "\e60f";
+@icon-chat-alt: "\e60b";
+@icon-dashboard: "\e60c";
+@icon-analytics: "\e602";
+@icon-atom: "\e603";
+@icon-chat: "\e604";
+@icon-cloud-storage: "\e605";
+@icon-globe: "\e606";
+@icon-lock: "\e607";
+@icon-push: "\e608";
+@icon-rewind: "\e609";
+@icon-window: "\e60a";
+@icon-slider-nav-left: "\e601";
+@icon-slider-nav-right: "\e600";
+@icon-inbox-empty: "\e663";
