--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -414,7 +414,7 @@ body {
       display: inline;
       font-size: 12px;
       border: none !important;
-      padding-left: 10px;
+      padding: 4px;
     }
 
     .back-to-top {
@@ -540,7 +540,7 @@ ul#toc,#toc li {
 }
 #toc > li >ol >li > ol a{
   font-size: 13px;
-  padding-left: 20px;
+  padding-left: 15px;
   padding-right: 10px;
 }
 
@@ -608,8 +608,12 @@ ul#toc,#toc li {
 #toc ol ol ol ol ol{
   display: none;
 }
-#toc ol li{
+#toc ol li {
   padding-left: 10px;
+}
+
+#toc > li > ol > li {
+  padding-left: 0;
 }
 
 // Download section
