--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -195,7 +195,7 @@ API参数详解参见 {% block runFuncApiLink %}{% endblock %}。
 
 ### 在 save 后执行动作
 
-在另一些情况下，你可能想在保存对象后做一些动作，例如发送一条push通知。类似的，你可以通过`afterSave`函数做到。举个例子，你想跟踪一篇博客的评论总数字，你可以这样做：
+在另一些情况下，你可能想在保存对象后做一些动作，例如发送一条push通知。类似的，你可以通过`afterSave`函数做到。举个例子，你想跟踪一篇博客的评论总数，你可以这样做：
 
 {% block afterSaveExample %}{% endblock %}
 
