feat(style): larger line-height for doc content
Ref: https://github.com/leancloud/docs/issues/452

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -25,6 +25,10 @@ body {
     }
   }
 
+  p {
+    margin-bottom: 1em;
+  }
+
   pre {
     margin-bottom: 18px;
     // fix inline comment indicator not showing in overflowed container
