Revert "增加关系建模指南模板，增加 android 相应代码"

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -82,7 +82,7 @@
           <li><a href="ios_push_guide.html">消息推送开发指南</a></li>
           <li><a href="ios_push_cert.html">iOS 推送证书设置指南</a></li>
           <li><a href="ios_realtime_v2.html">实时通信开发指南</a></li>
-          <li><a href="relation_guide-ios.html">关系建模指南</a></li>
+          <li><a href="relation_guide.html">关系建模指南</a></li>
           <li><a href="ios_statistics.html">统计分析开发指南</a></li>
           <li><a href="ios_os_x_sms_guide.html">短信验证使用指南</a></li>
           <li><a href="ios_crashreporting_guide.html">崩溃报告使用指南</a></li>
@@ -100,7 +100,6 @@
           <li><a href="android_guide.html">数据存储开发指南</a></li>
           <li><a href="android_push_guide.html">消息推送开发指南</a></li>
           <li><a href="android_realtime_v2.html">实时通信开发指南</a></li>
-          <li><a href="relation_guide-android.html">关系建模指南</a></li>
           <li><a href="android_statistics.html">统计分析开发指南</a></li>
           <li><a href="android_sms_guide.html">短信验证使用指南</a></li>
           <li><a href="android_faq.html">FAQ</a></li>
