Put new LeanInsight Guide online

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -187,7 +187,7 @@
             <li><a href="app_search_guide.html">应用内搜索和 DeepLink 开发指南</a></li>
             <li><a href="app_data_share.html">应用之间数据共享（Class 绑定）</a></li>
             <li><a href="user_groups.html">用户群分析指南</a></li>
-            <li><a href="insight_guide.html">离线数据分析使用指南</a></li>
+            <li><a href="leaninsight_guide.html">离线数据分析使用指南</a></li>
             <li><a href="sns.html">SNS 组件开发指南</a></li>
             <li><a href="feedback.html">用户反馈开发指南</a></li>
             <li class="divider"></li>
